<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/updateIdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/updateID"
        android:ems="10"/>

    <EditText
        android:id="@+id/updateNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/updateNameETHint"
        android:ems="10"/>

    <EditText
        android:id="@+id/updateWeightET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/updateWeightETHint"
        android:ems="10"/>

    <EditText
        android:id="@+id/updatePriceET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/updatePriceETHint"
        android:ems="10"/>

</LinearLayout>