<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_margin="@dimen/_4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameTextView"
        android:layout_margin="@dimen/_4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weightTextView"
        android:layout_margin="@dimen/_4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priceTextView"
        android:layout_margin="@dimen/_4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</LinearLayout>